--- a/City-Zen/src/gui/theme.css
+++ b/City-Zen/src/gui/theme.css
@@ -5,7 +5,9 @@ TrackingZone{
 GameBlock{
 	-fx-background-color: rgb(255, 0, 0);
 }
-
+Maps{
+	-fx-background-color: rgb(0, 0, 255);
+}
 /* O T H E R*/
 .root {
 	-fx-spacing :30;
