--- a/City-Zen/src/gui/theme.css
+++ b/City-Zen/src/gui/theme.css
@@ -8,6 +8,12 @@ GameBlock{
 Maps{
 	-fx-background-color: rgb(0, 0, 255);
 }
+ToolBox{
+	-fx-background-color: rgb(255, 255, 255);
+}
+DataDisplayer{
+	-fx-background-color: rgb(240, 255, 240);
+}
 /* O T H E R*/
 .root {
 	-fx-spacing :30;
