--- a/City-Zen/src/gui/theme.css
+++ b/City-Zen/src/gui/theme.css
@@ -3,16 +3,29 @@ TrackingZone{
 	-fx-background-color: rgb(0,0,0);
 }
 GameBlock{
-	-fx-background-color: rgb(255, 0, 0);
+	-fx-background-color: #998877;
 }
 Maps{
 	-fx-background-color: rgb(0, 0, 255);
 }
 ToolBox{
-	-fx-background-color: rgb(255, 255, 255);
+	-fx-background-color: #998877;
+}
+.toolBoxLabel{
+	-fx-text-fill : #001166;
+	-fx-font-size: 20px;
+    -fx-padding: 10 15 10 15;
+    -fx-border-width: 1;
+    -fx-font-family: "Comic Sans MS";
+}
+.toolBoxButton{
+	-fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+.toolBoxButton:hover{
+	-fx-background-color: linear-gradient(#184981, #1b67a1);
 }
 DataDisplayer{
-	-fx-background-color: rgb(240, 255, 240);
+	-fx-background-color: #716965;
 }
 /* O T H E R*/
 
