--- a/City-Zen/src/gui/theme.css
+++ b/City-Zen/src/gui/theme.css
@@ -66,6 +66,11 @@ StartMenu {
 	-fx-padding: 20 65 20 65;
 }
 
+.satisfaction{
+	-fx-alignment: center ;
+	-fx-padding: 20 60 20 60;
+}
+
 /* GENERAL */
 
 
