--- a/City-Zen/src/gui/theme.css
+++ b/City-Zen/src/gui/theme.css
@@ -14,6 +14,7 @@ ToolBox{
 #calendarLabel{
 	-fx-text-fill : rgb(255,255,255);
 	-fx-font-size: 14px;
+	-fx-pref-width: 220px;
 }
 .toolBoxLabel{
 	-fx-text-fill : #001166;
