--- a/City-Zen/src/gui/theme.css
+++ b/City-Zen/src/gui/theme.css
@@ -19,9 +19,10 @@ ToolBox{
 .toolBoxLabel{
 	-fx-text-fill : #001166;
 	-fx-font-size: 20px;
-    -fx-padding: 10 15 10 15;
+   	-fx-padding: 10 15 10 55;
     -fx-border-width: 1;
     -fx-font-family: "Comic Sans MS";
+	-fx-font-weight: bold;
 }
 .dataLabel{
 	-fx-text-fill : #001166;
@@ -29,6 +30,7 @@ ToolBox{
     -fx-padding: 5 5 5 5;
     -fx-border-width: 1;
     -fx-font-family: "Comic Sans MS";
+	-fx-underline: true;
 }
 .toolBoxButton{
 	-fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
@@ -72,7 +74,7 @@ StartMenu {
 	-fx-padding: 20 60 20 60;
 }
 
-/* GENERAL */
+/* Start Menu */
 
 
 .menuButton {
